Updated all HTML for HTML5 compliance

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -25,19 +25,18 @@
                          <div class="row justify-content-center">
                               <div class="col-6">
                                    <label for="username">Username</label>
-                                   <input type="text" class="form-control" name="username" value="">
+                                   <input id="username" type="text" class="form-control" name="username" value="">
                               </div>
                          </div>
                          <div class="row justify-content-center">
                               <div class="col-6">
                                    <label for="password">Password</label>
-                                   <input type="password" class="form-control" name="password" value="">
+                                   <input id="password" type="password" class="form-control" name="password" value="">
                               </div>
                          </div>
                          <div class="row justify-content-center">
                               <div class="col-6">
-                                  <label for="hidden"></label>
-                                  <input type="submit" class="btn btn-primary form-control" value="Login">
+                                  <input type="submit" class="btn btn-primary form-control mt-4" value="Login">
                               </div>
                          </div>
                     </form>
