--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -61,7 +61,7 @@
             </script>
           </form>
           <a class="btn btn-sm btn-warning my-3" role="button" href="/create">&laquo; Go Back</a>
-          <button id="fav_button" class="btn btn-sm btn-warning my-3" href="#">Make Favorite!</button>
+          <button id="fav_button" class="btn btn-sm btn-warning my-3">Make Favorite!</button>
     </div>
     <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
