--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
                          </div>
                          <!-- <div class="col-4 offset-2"> -->
                               <!-- <img src="#" alt="Image of featured pizza"> -->
-                         </div>
+                         <!-- </div> -->
                     </div>
                </div>
           </div>
