--- a/templates/accedit.html
+++ b/templates/accedit.html
@@ -19,28 +19,28 @@
                <div class="section">
                     <form class="" action="/account/{{staff.id}}/update" method="post">
                          <div class="form-group">
-                              <label for="first_sname">First Name</label>
-                             <input type="text" class="form-control" name="first_name" value="{{staff.first_name}}">
+                              <label for="first_name">First Name</label>
+                             <input id="first_name" type="text" class="form-control" name="first_name" value="{{staff.first_name}}">
                          </div>
                          <div class="form-group">
                               <label for="last_name">Last Name</label>
-                             <input type="text" class="form-control" name="last_name" value="{{staff.last_name}}">
+                             <input id="last_name" type="text" class="form-control" name="last_name" value="{{staff.last_name}}">
                          </div>
                          <div class="form-group">
                               <label for="username">User Name</label>
-                             <input type="text" class="form-control" name="username" value="{{staff.username}}">
+                             <input id="username" type="text" class="form-control" name="username" value="{{staff.username}}">
                          </div>
                          <div class="form-group">
                               <label for="email">email</label>
-                             <input type="text" class="form-control" name="email" value="{{staff.email}}">
+                             <input id="email" type="text" class="form-control" name="email" value="{{staff.email}}">
                          </div>
                          <div class="form-group">
                               <label for="user_level"></label>
-                             <input type="number" class="form-control" name="user_level" value="{{staff.user_level}}">
+                             <input id="user_level" type="number" class="form-control" name="user_level" value="{{staff.user_level}}">
                          </div>
                          <div class="form-group">
-                              <label for="price">Password</label>
-                             <input type="password" class="form-control" name="password" value="">
+                              <label for="password">Password</label>
+                             <input id="password" type="password" class="form-control" name="password" value="">
                          </div>
                          <input type="submit" class="btn btn-sm btn-primary" value="UPDATE STAFF">
                          <a class="btn btn-sm btn-warning" href="/admin/account">CANCEL</a>
