--- a/templates/account.html
+++ b/templates/account.html
@@ -13,7 +13,7 @@
                          //console.log("favorite");
                          var this_btn=this;
                          var fav_data={
-                              order_id: $(this).attr("order_id"),
+                              order_id: $(this).attr("data-order_id"),
                               customer_id: {{customer.id}}
                          };
                          $.ajax(
@@ -27,12 +27,12 @@
                                    $(this).text("Favorite");
                                    $(this).removeClass("btn-success");
                                    $(this).addClass("btn-primary");
-                                   $(this).attr("disabled", false); 
+                                   $(this).prop("disabled",false);
                               });
                               $(this_btn).text("Favorited");
                               $(this_btn).removeClass("btn-primary");
                               $(this_btn).addClass("btn-success");
-                              $(this_btn).attr("disabled", true); 
+                              $(this_btn).prop("disabled",true);
                          //});
                     });
                });
@@ -60,8 +60,8 @@
                                    <form class="col-lg-8 offset-lg-2" action="/account/update" method="post">
                                         <!-- <div class="form-row"> -->
                                              <div class="form-row">
-                                                  <label for="name">Name</label>
-                                                  <input type="text" class="form-control" name="name" value="{{customer.name}}">
+                                                  <label for="user_name">Name</label>
+                                                  <input id="user_name" type="text" class="form-control" name="name" value="{{customer.name}}">
                                              <!-- </div> -->
                                              <!-- <div class="form-group col-md-6">
                                                   <label for="username">User Name</label>
@@ -70,24 +70,24 @@
                                         </div>
                                         <div class="form-row">
                                              <label for="email">Email</label>
-                                             <input type="text" class="form-control" name="email" value="{{customer.email}}">
+                                             <input id="email" type="text" class="form-control" name="email" value="{{customer.email}}">
                                         </div>
                                         <div class="form-row">
                                              <label for="phone">Phone</label>
-                                             <input type="tel" class="form-control" name="phone" value="{{customer.phone_number}}">
+                                             <input id="phone" type="tel" class="form-control" name="phone" value="{{customer.phone_number}}">
                                         </div>
                                         <div class="form-row">
                                              <label for="street_address">Address</label>
-                                             <input type="text" class="form-control" name="street_address" value="{{customer.addresses[0].street_address}}">
+                                             <input id="street_address" type="text" class="form-control" name="street_address" value="{{customer.addresses[0].street_address}}">
                                         </div>
                                         <div class="form-row">
                                              <div class="form-group col-md-8">
                                                   <label for="city">City</label>
-                                                  <input type="text" class="form-control" name="city" value="{{customer.addresses[0].city}}">
+                                                  <input id="city" type="text" class="form-control" name="city" value="{{customer.addresses[0].city}}">
                                              </div>
                                              <div class="form-group col-md-4">
                                                   <label for="state">State</label>
-                                                  <select name="state" class="form-control">
+                                                  <select id="state" name="state" class="form-control">
                                                        <option selected value="{{customer.addresses[0].state.name}}">{{customer.addresses[0].state.name}}</option>
                                                        <option value="AL">AL</option>
                          	                         <option value="AK">AK</option>
@@ -145,14 +145,13 @@
                                         </div>
                                         <div class="form-row">
                                              <label for="password">Change Password</label>
-                                             <input type="password" class="form-control" name="password" value="">
+                                             <input id="password" type="password" class="form-control" name="password" value="">
                                         </div>
                                         <div class="form-row">
                                              <label for="pw_confirm">Confirm New Password</label>
-                                             <input type="password" class="form-control" name="confirm_password" value="">
+                                             <input id="pw_confirm" type="password" class="form-control" name="confirm_password" value="">
                                         </div>
-                                        <label for="hidden"></label>
-                                        <input type="submit" class="btn btn-success btn-block" value="update">
+                                        <input type="submit" class="btn btn-success btn-block mt-4" value="update">
                                    </form>
                               </div>
                               <div class="col-lg-7 col-sm-4">
@@ -191,13 +190,11 @@
                                                        </ul>
                                                   </td>
                                                        <td>
-                                                       <!-- <input type="checkbox" name="active-toppings-bulk" value=""> -->
                                                        {% if order.id==customer.favorite_order_id %}
-                                                       <button order_id="{{order.id}}" disabled="true" class="fav_button btn btn-sm btn-success">Favorited</button>
+                                                       <button data-order_id="{{order.id}}" disabled class="fav_button btn btn-sm btn-success">Favorited</button>
                                                        {% else %}
-                                                       <button order_id="{{order.id}}" class="fav_button btn btn-sm btn-primary">Favorite</button>
+                                                       <button data-order_id="{{order.id}}" class="fav_button btn btn-sm btn-primary">Favorite</button>
                                                        {% endif %}
-                                                       <label for="active-toppings-bulk"></label>
                                                   </td>
                                              </tr>
                                              {% endfor %}
@@ -208,7 +205,6 @@
                     </div>
                </div>
            </div>
-          <!-- add bootstrap js code here later -->
           <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
           <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
      </body>
