--- a/templates/adaccount.html
+++ b/templates/adaccount.html
@@ -53,27 +53,27 @@
                               <form class="" action="/account/user/create" method="post">
                                    <div class="form-group">
                                         <label for="first_name">First Name</label>
-                                       <input type="text" class="form-control" name="first_name" value="">
+                                       <input id="first_name" type="text" class="form-control" name="first_name" value="">
                                    </div>
                                    <div class="form-group">
                                         <label for="last_name">Last Name</label>
-                                       <input type="text" class="form-control" name="last_name" value="">
+                                       <input id="last_name" type="text" class="form-control" name="last_name" value="">
                                    </div>
                                    <div class="form-group">
                                         <label for="username">Username</label>
-                                       <input type="text" class="form-control" name="username" value="">
+                                       <input id="username" type="text" class="form-control" name="username" value="">
                                    </div>
                                    <div class="form-group">
                                         <label for="email">email</label>
-                                       <input type="text" class="form-control" name="email" value="">
+                                       <input id="email" type="text" class="form-control" name="email" value="">
                                    </div>
                                    <div class="form-group">
                                         <label for="user_level">User Level</label>
-                                       <input type="number" class="form-control" name="user_level" value="">
+                                       <input id="user_level" type="number" class="form-control" name="user_level" value="">
                                    </div>
                                    <div class="form-group">
                                         <label for="password">Password</label>
-                                       <input type="password" class="form-control" name="password" value="">
+                                       <input id="password" type="password" class="form-control" name="password" value="">
                                    </div>
                                    <input type="submit" class="btn btn-sm btn-primary" value="ADD STAFF">
                               </form>
