--- a/templates/login.html
+++ b/templates/login.html
@@ -35,19 +35,18 @@
                          <div class="row justify-content-center">
                               <div class="col-6">
                                    <label for="email">Email</label>
-                                   <input type="text" class="form-control" name="email_address" value="">
+                                   <input id="email" type="text" class="form-control" name="email_address" value="">
                               </div>
                          </div>
                          <div class="row justify-content-center">
                               <div class="col-6">
                                    <label for="password">Password</label>
-                                   <input type="password" class="form-control" name="password" value="">
+                                   <input id="password" type="password" class="form-control" name="password" value="">
                               </div>
                          </div>
                          <div class="row justify-content-center">
                               <div class="col-6">
-                                   <label for="hidden"></label>
-                                   <input type="submit" class="btn btn-primary form-control" value="Login">
+                                   <input type="submit" class="btn btn-primary form-control mt-4" value="Login">
                               </div>
                          </div>
                     </form>
