--- a/templates/register.html
+++ b/templates/register.html
@@ -34,7 +34,7 @@
                               <!-- <div class="form-row"> -->
                                    <div class="form-row">
                                         <label for="name">Name</label>
-                                        <input type="text" class="form-control" name="name" value="">
+                                        <input id="name" type="text" class="form-control" name="name" value="">
                                    </div>
                                    <!-- <div class="form-group col-md-6">
                                         <label for="username">User Name</label>
@@ -43,24 +43,24 @@
                               <!-- </div> -->
                               <div class="form-row">
                                    <label for="email">Email</label>
-                                   <input type="text" class="form-control" name="email_address" value="">
+                                   <input id="email" type="text" class="form-control" name="email_address" value="">
                               </div>
                               <div class="form-row">
                                    <label for="phone">Phone</label>
-                                   <input type="tel" class="form-control" name="phone_number" value="">
+                                   <input id="phone" type="tel" class="form-control" name="phone_number" value="">
                               </div>
                               <div class="form-row">
                                    <label for="street_address">Address</label>
-                                   <input type="text" class="form-control" name="street_address" value="">
+                                   <input id="street_address" type="text" class="form-control" name="street_address" value="">
                               </div>
                               <div class="form-row">
                                    <div class="form-group col-md-10">
                                         <label for="city">City</label>
-                                        <input type="text" class="form-control" name="city" value="">
+                                        <input id="city" type="text" class="form-control" name="city" value="">
                                    </div>
                                    <div class="form-group col-md-2">
                                         <label for="state">State</label>
-                                        <select name="state" class="form-control">
+                                        <select id="state" name="state" class="form-control">
                                              <option selected value="">Choose...</option>
                                              <option value="AL">AL</option>
                	                         <option value="AK">AK</option>
@@ -118,14 +118,13 @@
                               </div>
                               <div class="form-row">
                                    <label for="password">Password</label>
-                                   <input type="password" class="form-control" name="password" value="">
+                                   <input id="password" type="password" class="form-control" name="password" value="">
                               </div>
                               <div class="form-row">
                                    <label for="pw_confirm">Confirm Password</label>
-                                   <input type="password" class="form-control" name="confirm_password" value="">
+                                   <input id="pw_confirm" type="password" class="form-control" name="confirm_password" value="">
                               </div>
-                              <label for="hidden"></label>
-                              <input type="submit" class="btn btn-primary btn-block" value="Join">
+                              <input type="submit" class="btn btn-primary btn-block mt-4" value="Join">
                          </form>
                </div>
           </div>
