--- a/templates/restdash.html
+++ b/templates/restdash.html
@@ -9,7 +9,7 @@
           <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/dark-hive/jquery-ui.css">
           <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
           <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-          <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+          <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
           <script src="{{ url_for('static', filename='admin.js') }}"></script>
           <script src="{{ url_for('static', filename='timer.js')}}"></script>
           <script>
@@ -28,7 +28,7 @@
                          $("#order_title").text("CURRENT ORDERS: "+order_count);
                          $(".order_timer").each(function(i){
                               t_d[i]=new IntervalTimer;
-                              t_d[i].start_time=Date.parse($(this).attr("ordered_at"));
+                              t_d[i].start_time=Date.parse($(this).attr("data-ordered_at"));
                               console.log(t_d[i].start_time);
                               //$(this).text(t_d[i]);
                               var timer_display=this;
@@ -43,7 +43,7 @@
                     $("#current_orders").on("click",".order_ready_btn",function(event){
                          var parent=$(this).parent();
                          //tell the server that the order is ready
-                         socket.emit('order_ready', {order_id: $(parent).attr("order_id")});
+                         socket.emit('order_ready', {order_id: $(parent).attr("data-order_id")});
                          $(this).parent().slideUp("400",function(){
                               $(parent).remove();
                               //update order_title
@@ -67,8 +67,8 @@
                     <h1 class="h5" id="order_title">CURRENT ORDERS</h1>
                     <ul class="list-unstyled" id="current_orders">
                     {% for order in orders: %}
-                         <li class="section my-3 customer_order" order_id="{{order.id}}">
-                              <p class="order_timer" ordered_at="{{order.updated_at}} GMT"></p>
+                         <li class="section my-3 customer_order" data-order_id="{{order.id}}">
+                              <p class="order_timer" data-ordered_at="{{order.updated_at}} GMT"></p>
                               Order #{{order.id}} ({{order.order_type.name}}):
                               {{order.customer.name}} ({{order.customer.phone_number}}), {{order.customer.addresses[0].street_address}}, {{order.customer.addresses[0].city}} {{order.customer.addresses[0].state.name}}
                               <ol>
