--- a/templates/style.html
+++ b/templates/style.html
@@ -20,17 +20,17 @@
                          <h3 class="h4">EDIT STYLE</h3>
                          <form class="" action="/admin/{{style.id}}/update_style" method="post">
                              <div class="form-group">
-                                  <label for="top_name">Name</label>
-                                  <input type="text" class="form-control" name="name" value="{{style.name}}">
+                                  <label for="style_name">Name</label>
+                                  <input id="style_name" type="text" class="form-control" name="name" value="{{style.name}}">
                              </div>
                              <div class="form-group">
-                                  <label for="description">Description</label>
-                                  <textarea class="form-control" name="description" rows="4" cols="40">{{style.description}}</textarea>
+                                  <label for="style_description">Description</label>
+                                  <textarea id="style_description" class="form-control" name="description" rows="4" cols="40">{{style.description}}</textarea>
                              </div>
 
                              <div class="form-group">
-                                  <label for="price">Price</label>
-                                  <input type="text" class="form-control" name="price" value="{{style.price}}">
+                                  <label for="style_price">Price</label>
+                                  <input id="style_price" type="text" class="form-control" name="price" value="{{style.price}}">
                              </div>
                              <input type="submit" class="btn btn-sm btn-success" value="UPDATE">
                              <a class="btn btn-sm btn-warning" href="/admin/dash#tabs-2">Back</a>
