--- a/templates/top.html
+++ b/templates/top.html
@@ -20,17 +20,17 @@
                          <h3 class="h4">EDIT TOPPING</h3>
                          <form class="" action="/admin/{{topping.id}}/update_topping" method="post">
                              <div class="form-group">
-                                  <label for="top_name">Name</label>
-                                  <input type="text" class="form-control" name="name" value="{{topping.name}}">
+                                  <label for="topping_name">Name</label>
+                                  <input id="topping_name" type="text" class="form-control" name="name" value="{{topping.name}}">
                              </div>
                              <div class="form-group">
-                                  <label for="description">Description</label>
-                                  <textarea class="form-control" name="description" rows="4" cols="40">{{topping.description}}</textarea>
+                                  <label for="topping_description">Description</label>
+                                  <textarea id="topping_description" class="form-control" name="description" rows="4" cols="40">{{topping.description}}</textarea>
                              </div>
 
                              <div class="form-group">
-                                  <label for="price">Price</label>
-                                  <input type="text" class="form-control" name="price" value="{{topping.price}}">
+                                  <label for="topping_price">Price</label>
+                                  <input id="topping_price" type="text" class="form-control" name="price" value="{{topping.price}}">
                              </div>
                              <input type="submit" class="btn btn-sm btn-success" value="UPDATE">
                              <a class="btn btn-sm btn-warning" href="/admin/dash#tabs-1">Back</a>
