--- a/templates/restdash.html
+++ b/templates/restdash.html
@@ -15,7 +15,9 @@
           <script>
                $(function(){
                     //connect to the socket server.
-                    var socket = io.connect('http://' + document.domain + ':' + location.port + '/restdash');
+                    //var socket = io.connect('https://' + document.domain + ':' + location.port + '/restdash');
+                    var socket = io.connect(location.protocol+'//' + document.domain + ':' + location.port + '/restdash');
+                    console.log(location.protocol+'//' + document.domain + ':' + location.port + '/restdash');
                     //receive details from server
                     socket.on('neworder', function(msg) {
                          console.log("Received order" + msg);
